fix: hotkey bug

--- a/devtime.csproj
+++ b/devtime.csproj
@@ -71,6 +71,9 @@
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -224,6 +227,7 @@
     <None Include="res\tray-green.ico" />
     <None Include="res\tray-red.ico" />
     <None Include="res\tray-yellow.ico" />
+    <Content Include="icon.ico" />
     <Content Include="sqlite3.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
